# AURA

./: .gitignore  README.md  pyproject.toml
docs/: README.md  architecture.md
docs/systems/: README.md  backend.md  (+10 more)
scripts/: object_memory_cleanup.py  setup_system_venv_windows.ps1
tests/: test_agent_memory.py  test_agent_memory_reasoning_integration.py  test_backend.py  test_backend_object_memory_sink.py  test_backend_session_manager.py  test_backend_webrtc_config.py  test_backend_webrtc_session.py  test_backend_webrtc_subscriber.py  test_inference_dialogue_server.py  test_inference_planner_completion_client.py  test_inference_planner_server.py  test_inference_stack_server.py  test_knowledge_postgres_integration.py  test_knowledge_service.py  test_memory_stm.py  test_navdp_tensorrt_acceleration.py  test_navigation_service.py  test_object_memory.py  test_object_memory_postgres_integration.py  test_perception_observation.py  test_planner_catalog_service.py  test_planner_tasking.py  test_reasoning_intent_routing.py  test_reasoning_runtime_e2e.py  test_reasoning_service_stop.py  test_requested_scenarios.py  test_runtime.py  test_runtime_context_summary.py  test_runtime_coordinator.py  test_runtime_launcher_config.py  test_runtime_planner_status.py  test_service_endpoint_contracts.py  test_subsystem_architecture.py  test_system2_check_session.py  test_target_runtime_entrypoints.py  test_target_runtime_paths.py  test_world_state_runtime_state.py  test_yolo_object_memory_live_e2e.py  test_yolo_object_memory_postgres_e2e.py  test_yolo_object_memory_retrieval_flow.py
(+119 files in other folders)
